[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exengine"
authors = [{name = "Henry Pinkard", email = "henry.pinkard.open.source@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
    ]
dependencies = [
"pydantic"
]

dynamic = ["version"]
description = "Microscopy execution engine with support for multiple hardware backends"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]  

# all backends
all = [
    "mmpycorex",
    "ndstorage"
    ]

# device backends
micromanager = ["mmpycorex"]

# storage backends
ndstorage = ["ndstorage"]


[project.urls]
Home = "https://github.com/micro-manager/ExEngine"

